# nerve

./: .gitignore  Benchmark_LLM.md  CLAUDE.md  README.md  pyproject.toml
docs/: manuel.html
docs/superpowers/plans/: 2026-06-13-nerve-I1-graph-quality.md  2026-06-13-nerve-I2-ingestion.md  2026-06-13-nerve-I3-scheduler.md  2026-06-13-nerve-walking-skeleton.md  2026-06-14-nerve-I4-3levels.md  2026-06-14-nerve-I5-visualization.md  2026-06-14-selecteur-modele-llm.md  2026-06-25-nerve-type-noeud-categoriel.md
docs/superpowers/specs/: 2026-06-13-nerve-I1-graph-quality-design.md  2026-06-13-nerve-I2-ingestion-design.md  2026-06-13-nerve-I3-scheduler-design.md  2026-06-13-nerve-portage-design.md  2026-06-14-nerve-I4-3levels-design.md  2026-06-14-nerve-I5-visualization-design.md  2026-06-14-selecteur-modele-llm-design.md  2026-06-25-nerve-type-noeud-categoriel-design.md
nerve/: __init__.py  api.py  config.py  dedup.py  embeddings.py  entities.py  extract.py  graph.py  ingest.py  kinds.py  llm.py  pipeline.py  scheduler.py  store.py  textutil.py  transcode.py  vecutil.py
nerve/web/: graph.js  index.html  theme.css
scripts/: bench_models.py  calibrate_thresholds.py  seed_demo.py
tests/: test_api.py  test_config.py  test_dedup.py  test_embeddings.py  test_entities.py  test_extract.py  test_graph.py  test_ingest.py  test_kinds.py  test_llm.py  test_pipeline.py  test_scheduler.py  test_store.py  test_textutil.py  test_transcode.py  test_vecutil.py
