[project]
name = "nerve"
version = "0.1.0"
description = "Extracteur et visualiseur de graphes de connaissances"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "numpy>=1.26",
  "python-multipart>=0.0.9",
  "pypdf>=4.0",
  "trafilatura>=1.8",
  "sqlite-vec>=0.1.1",
]

[project.scripts]
nerve = "nerve.api:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
